refactoring and bug fixes

--- a/src/main/resources/config/windfarm-genco.properties
+++ b/src/main/resources/config/windfarm-genco.properties
@@ -4,19 +4,19 @@
 wpgenco.windfarmGenco.numberOfTurbines = 100
 
 # Turbine capacity in MW
-wpgenco.windfarmGenco.turbineCapacity  = 1.5
+wpgenco.windTurbine.turbineCapacity  = 1.5
 
 # cut in speed - minimum wind speed in m/sec when the turbine starts producing power
-wpgenco.windfarmGenco.cutInSpeed = 4
+wpgenco.windTurbine.cutInSpeed = 4
 
 # cut out speed - upper limit of wind speed in m/sec at which the turbine will stop producing power
-wpgenco.windfarmGenco.cutOutSpeed = 25
+wpgenco.windTurbine.cutOutSpeed = 25
 
 # between the maxPowerOutputSpeed and cut out speed the turbine produces output power at the high limit
-wpgenco.windfarmGenco.maxPowerOutputSpeed = 14
+wpgenco.windTurbine.maxPowerOutputSpeed = 14
 
 # sweep area of turbine in m^2
-wpgenco.windfarmGenco.sweepAreaOfTurbine = 2391.2
+wpgenco.windTurbine.sweepAreaOfTurbine = 2391.2
 
 # Ask price/mwh
 wpgenco.windfarmGenco.askPrice = 1.0
@@ -31,10 +31,10 @@ wpgenco.windForecastErrorScenarios.errorScenarioDataFile = "/tmp/windspeederrors
 # Efficiency curve definition
 #
 # wind speed bands in m/sec
-wpgenco.windFarmEfficiencyCurve.cfgWindSpeedbands = 4-5,5-6,6-7,7-8,8-9,9-10,10-11,11-12,12-13,13-14
+wpgenco.windTurbineEfficiencyCurve.cfgWindSpeedbands = 4-5,5-6,6-7,7-8,8-9,9-10,10-11,11-12,12-13,13-14
 # slope m
-wpgenco.windFarmEfficiencyCurve.cfgSlope = 0.112704918,0.048960386,0.022516468,0.01184951,0.012746067,0.007222986,-0.029581606,-0.068315931,-0.068956675,-0.055775751
+wpgenco.windTurbineEfficiencyCurve.cfgSlope = 0.112704918,0.048960386,0.022516468,0.01184951,0.012746067,0.007222986,-0.029581606,-0.068315931,-0.068956675,-0.055775751
 # y intercept b
-wpgenco.windFarmEfficiencyCurve.cfgYIntercept = -0.215582134,0.103140528,0.261804034,0.33647274,0.329300284,0.379008009,0.747053936,1.173131512,1.180820432,1.009468425
+wpgenco.windTurbineEfficiencyCurve.cfgYIntercept = -0.215582134,0.103140528,0.261804034,0.33647274,0.329300284,0.379008009,0.747053936,1.173131512,1.180820432,1.009468425
 
 
